Resolves: tdf#120731 crash in border tabpage

Change-Id: Id11b8fdc91e552a38a78f13df410f4d364e7acbf
Reviewed-on: https://gerrit.libreoffice.org/62170
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>