cui/source/inc/border.hxx
@@ -47,6 +47,7 @@ public:
 
     SvxShadowItem GetControlValue(const SvxShadowItem& rItem) const;
     void SetControlValue(const SvxShadowItem& rItem);
+    void SetControlDontKnow();
 
 private:
     SvtValueSet&                        mrVsPos;
@@ -62,6 +63,7 @@ public:
 
     SvxMarginItem GetControlValue(const SvxMarginItem& rItem) const;
     void SetControlValue(const SvxMarginItem& rItem);
+    void SetControlDontKnow();
 
     bool get_value_changed_from_saved() const;
 
